fix: add text-wrap property to balance message formatting

--- a/src/App.css
+++ b/src/App.css
@@ -630,6 +630,7 @@ main {
 }
 .r-msg {
 	font-size: 0.875rem;
+	text-wrap:balance;
 }
 
 .stats {
